Fix styling of preview images on small screen

--- a/src/pcss/elements/profile-generator.pcss
+++ b/src/pcss/elements/profile-generator.pcss
@@ -19,6 +19,7 @@
     &__overlays {
         display: flex;
         flex-direction: row;
+        justify-content: center;
         flex-wrap: wrap;
 
         img {
